Fix storysec_overflow

--- a/scss/layout/_sec3-story.scss
+++ b/scss/layout/_sec3-story.scss
@@ -54,6 +54,7 @@
     margin-top: -100vw;
     // 컨탠츠
     .content {
+      overflow: visible;
       &__descript {
         margin-left: 5%;
       }
